--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-remote_theme: pages-themes/cayman@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+remote_theme: pages-themes/primer@v0.6.0
+
 title: Cambaliza McGee LLP - Support Tools
 description: This is where I share some small tools for our firm
 author: Thuyen Vo
+
 
