--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-remote_theme: pages-themes/primer@v0.6.0
+theme: minima
 title: Cambaliza McGee LLP - Support Tools
 description: This is where I share some small tools for our firm
 author: Thuyen Vo
